Attempt to fix upper heading spacing
I have attempted to fix the upper heading spacing as desired, however my approach seems wrong, I am going to make a new branch and start the spacing issues from scratch

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16182,5 +16182,10 @@ readers do not read off random characters that represent icons */
     display: none;
   }
 }
+@media (max-width: 992px) {
+  .row {
+    width: 100%;
+  }
+}
 
 /*# sourceMappingURL=style.css.map */
