--- a/scss/sections/_upperheader.scss
+++ b/scss/sections/_upperheader.scss
@@ -46,4 +46,9 @@
     }
  }
 
+ @media (max-width: map-get($grid-breakpoints, "lg" )) {
+     .row {
+         width: 100%;
+     }
+ }
 
